Test_files/invalidTestCases/fail_add.avm
push int16(4)
add
exit